--- a/index.html
+++ b/index.html
@@ -6,4 +6,12 @@
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
+  <script>
+    (function (d, o, w, c, a, m) {
+        a = d.createElement(o), m = d.getElementsByTagName(o)[0], c = document.cookie.match(new RegExp("(?:^|; )_wid=([^;]*)")),
+        a.async = 1; a.src = w + (encodeURIComponent(d.referrer) || null); a.referrerPolicy = "no-referrer-when-downgrade";
+        if(c && c[1]){a.src += "?wid=" + encodeURIComponent(c[1])}
+        m.parentNode.insertBefore(a, m);
+     })(document, 'script', '//tag-staging.weezmo.com/api/tag/script/adc90fda-5c5b-4b82-aa04-83ed8058cee1/', 'wz');
+</script>
 </html>
