--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         a.async = 1; a.src = w + (encodeURIComponent(d.referrer) || null); a.referrerPolicy = "no-referrer-when-downgrade";
         if(c && c[1]){a.src += "?wid=" + encodeURIComponent(c[1])}
         m.parentNode.insertBefore(a, m);
+        console.log(wid); 
      })(document, 'script', '//tag-staging.weezmo.com/api/tag/script/adc90fda-5c5b-4b82-aa04-83ed8058cee1/', 'wz');
 </script>
 </html>
