--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>This is the ZAkhatTest_ROPO2 TESTING</title>
   </head>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
-  <script>
+<script>
     (function (d, o, w, c, a, m) {
         a = d.createElement(o), m = d.getElementsByTagName(o)[0], c = document.cookie.match(new RegExp("(?:^|; )_wid=([^;]*)")),
         a.async = 1; a.src = w + (encodeURIComponent(d.referrer) || null); a.referrerPolicy = "no-referrer-when-downgrade";
         if(c && c[1]){a.src += "?wid=" + encodeURIComponent(c[1])}
         m.parentNode.insertBefore(a, m);
-        console.log(wid); 
-     })(document, 'script', '//tag-staging.weezmo.com/api/tag/script/adc90fda-5c5b-4b82-aa04-83ed8058cee1/', 'wz');
+     })(document, 'script', '//tag-staging.weezmo.com/api/tag/script/7cf4e566-18a9-4d0c-804b-acee861787f1/', 'wz');
 </script>
 </html>
