--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         a.async = 1; a.src = w + (encodeURIComponent(d.referrer) || null); a.referrerPolicy = "no-referrer-when-downgrade";
         if(c && c[1]){a.src += "?wid=" + encodeURIComponent(c[1])}
         m.parentNode.insertBefore(a, m);
-     })(document, 'script', '//tag-staging.weezmo.com/api/tag/script/7cf4e566-18a9-4d0c-804b-acee861787f1/', 'wz');
+     })(document, 'script', '//tag.weezmo.com/api/tag/script/9871e9e4-963f-49e1-8717-d7d2c3ca5612/', 'wz');
 </script>
 </html>
